<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="has"
            type="Boolean" />

        <variable
            name="hasdevice"
            type="cn.yaman.activity.HomeActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_block_bg"
        android:visibility="@{has==false?View.GONE:View.VISIBLE}">

        <TextView
            android:id="@+id/tv_home_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/home_plan_today"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_home_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_home_today"
            android:layout_alignLeft="@+id/tv_home_today"
            android:layout_marginTop="@dimen/dp_08"
            android:text="@string/home_plan_sign"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_home_sign"
            android:layout_alignLeft="@+id/tv_home_today"
            android:layout_marginTop="@dimen/dp_08"
            android:drawableRight="@mipmap/ic_home_user_arrow"
            android:drawablePadding="10dp"
            android:text="@string/home_plan_pre_nurse"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:id="@+id/iv_device_sign"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/iv_device_sign"
            android:layout_marginTop="5dp"
            android:background="@color/color_home_module_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_line"
            android:gravity="center_vertical"
            android:onClick="selectScheme"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/iv_schema_select"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/ic_home_schema" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_schema_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/schema_select"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/iv_schema_select"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/iv_schema_select"
                    android:text="@string/schema_select_hint"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:src="@mipmap/ic_home_user_arrow" />
        </LinearLayout>
    </RelativeLayout>
</layout>